redo tour plus responsive changes

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/index.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     
     <body>
@@ -33,7 +34,8 @@
         </div>
 
         <div class="container">
-            <h1 class="ahheader text-center">ORIGINAL BAND MEMBERS</h1>
+            <h1 class="ahsection">ORIGINAL BAND MEMBERS</h1>
+            <p class="ahbodytext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisl purus in mollis nunc sed id semper. Ipsum dolor sit amet consectetur adipiscing elit duis tristique. Tristique et egestas quis ipsum suspendisse ultrices.</p>
         <div class="row justify-content-center">
             <div class="card m-3" style="width: 18rem;">
                 <img class="card-img-top" src="images/fred.jpg" alt="Fred Schneider">
@@ -74,12 +76,8 @@
         </div>
 
         <div class="container pt-5 pb-4">
-                <p class="ahbodytext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisl purus in mollis nunc sed id semper. Ipsum dolor sit amet consectetur adipiscing elit duis tristique. Tristique et egestas quis ipsum suspendisse ultrices. Ac feugiat sed lectus vestibulum mattis. Egestas diam in arcu cursus.</p>
-            </div>
-
-
-        <div class="container">
-            <h1 class="ahheader text-center">TOURING BAND MEMBERS</h1>
+            <h1 class="ahsection">TOURING BAND MEMBERS</h1>
+            <p class="ahbodytext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisl purus in mollis nunc sed id semper. Ipsum dolor sit amet consectetur adipiscing elit duis tristique. Tristique et egestas quis ipsum suspendisse ultrices. Ac feugiat sed lectus vestibulum mattis. Egestas diam in arcu cursus.</p>
             <p class="ahbodytext">
                 <ul>
                 <li>Tracy Wormworth – bass (1992–present)</li>
@@ -94,15 +92,14 @@
                 </ul></p>
 
 
-            <div class="container p-5">
+            <div class="container pt-5">
+                    <h1 class="ahsection">HISTORY</h1>
+                    <p class="ahbodytext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisl purus in mollis nunc sed id semper. Ipsum dolor sit amet consectetur adipiscing elit duis tristique. Tristique et egestas quis ipsum suspendisse ultrices. Ac feugiat sed lectus vestibulum mattis. Egestas diam in arcu cursus.</p>
                 <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Oh5J33KAaqw"></iframe>
+                    <iframe class="embed-responsive-item pt-2" src="https://www.youtube.com/embed/Oh5J33KAaqw"></iframe>
                 </div>
             </div>
 
-            <div class="container pt-5 pb-4">
-                <p class="ahbodytext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisl purus in mollis nunc sed id semper. Ipsum dolor sit amet consectetur adipiscing elit duis tristique. Tristique et egestas quis ipsum suspendisse ultrices. Ac feugiat sed lectus vestibulum mattis. Egestas diam in arcu cursus.</p>
-            </div>
 
 
         <footer class="page-footer pt-3">
