--- a/music.html
+++ b/music.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/index.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     
     <body>
@@ -40,7 +41,7 @@
                     <div class="card-body">
                         <h3 class="ahheader">The B-52's</h3>
                         <p class="ahbodytext">Platinum debut with some of the band's best known songs such as Rock Lobster and Planet Claire</p>
-                        <a href="https://music.apple.com/us/album/the-b-52s/983126000" target="_blank"><img src="images/appleicon.png" alt="buy album from Apple"></a>
+                        <a href="https://music.apple.com/us/album/the-b-52s/983126000" target="_blank"><img src="images/appleicon.png" class="pr-2" alt="buy album from Apple"></a>
                         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#album1">LISTEN</button>
                         <p class="ahcardfooter">1979</p>
                     </div>
@@ -63,7 +64,7 @@
                     <div class="card-body">
                         <h3 class="ahheader">Wild Planet</h3>
                         <p class="ahbodytext">Certified gold second studio album includes concert staples such as Private Idaho</p>
-                        <a href="https://music.apple.com/us/album/wild-planet/983119568" target="_blank"><img src="images/appleicon.png" alt="buy album from Apple"></a>
+                        <a href="https://music.apple.com/us/album/wild-planet/983119568" target="_blank"><img src="images/appleicon.png" class="pr-2" alt="buy album from Apple"></a>
                         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#album2">LISTEN</button>
                         <p class="ahcardfooter">1980</p>
                     </div>
@@ -117,7 +118,7 @@
                      <div class="card-body">
                         <h3 class="ahheader">Whammy</h3>
                         <p class="ahbodytext">Third studio album features drum machines, synths, and vocals from all five members</p>
-                        <a href="https://music.apple.com/us/album/whammy/983119846" target="_blank"><img src="images/appleicon.png" alt="buy album from Apple"></a>
+                        <a href="https://music.apple.com/us/album/whammy/983119846" target="_blank"><img src="images/appleicon.png" class="pr-2" alt="buy album from Apple"></a>
                         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#album5">LISTEN</button>
                         <p class="ahcardfooter">1983</p>
                     </div>
@@ -140,7 +141,7 @@
                     <div class="card-body">
                         <h3 class="ahheader">Bouncing Off the Satellites</h3>
                         <p class="ahbodytext">Ballad-driven, less upbeat fourth studio album was the last to include Ricky Wilson</p>
-                        <a href="https://music.apple.com/us/album/bouncing-off-the-satellites/983125253" target="_blank"><img src="images/appleicon.png" alt="buy album from Apple"></a>
+                        <a href="https://music.apple.com/us/album/bouncing-off-the-satellites/983125253" target="_blank"><img src="images/appleicon.png" class="pr-2" alt="buy album from Apple"></a>
                         <p class="ahcardfooter">1986</p>
                     </div>
             </div>      
@@ -150,7 +151,7 @@
                     <div class="card-body">
                         <h3 class="ahheader">Cosmic Thing</h3>
                         <p class="ahbodytext">Comeback fifth studio platinum album includes the hits Roam and Love Shack</p>
-                        <a href="https://music.apple.com/us/album/cosmic-thing/983850956" target="_blank"><img src="images/appleicon.png" alt="buy album from Apple"></a>
+                        <a href="https://music.apple.com/us/album/cosmic-thing/983850956" target="_blank"><img src="images/appleicon.png" class="pr-2" alt="buy album from Apple"></a>
                         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#album7">LISTEN</button>
                         <p class="ahcardfooter">1989</p>
                     </div>
@@ -182,7 +183,7 @@
                         <div class="card-body">
                             <h3 class="ahheader">Good Stuff</h3>
                             <p class="ahbodytext">Grammy-nominated sixth studio gold album includes radio hit Good Stuff</p>
-                            <a href="https://music.apple.com/us/album/good-stuff/983125862" target="_blank"><img src="images/appleicon.png" alt="buy album from Apple"></a>
+                            <a href="https://music.apple.com/us/album/good-stuff/983125862" target="_blank"><img src="images/appleicon.png" class="pr-2" alt="buy album from Apple"></a>
                             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#album9">LISTEN</button>
                             <p class="ahcardfooter">1992</p>
                         </div>
@@ -250,7 +251,7 @@
                             <div class="card-body">
                                 <h3 class="ahheader">Funplex</h3>
                                 <p class="ahbodytext">Seventh, and most recent, studio album of eleven new songs alongside bonus content</p>
-                                <a href="https://music.apple.com/us/album/funplex/721287617" target="_blank"><img src="images/appleicon.png" alt="buy album from Apple"></a>
+                                <a href="https://music.apple.com/us/album/funplex/721287617" target="_blank"><img src="images/appleicon.png" class="pr-2" alt="buy album from Apple"></a>
                                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#album12">LISTEN</button>
                                 <p class="ahcardfooter">2008</p>
                             </div>
@@ -295,7 +296,7 @@
                         <div class="card-body">
                             <h3 class="ahheader">Live! 8-24-1979</h3>
                             <p class="ahbodytext">Live recording of August 24, 1979 concert at The Berklee Center in Boston, Massachusetts</p>
-                            <a href="https://music.apple.com/us/album/live-8-24-1979/984765166" target="_blank"><img src="images/appleicon.png" alt="buy album from Apple"></a>
+                            <a href="https://music.apple.com/us/album/live-8-24-1979/984765166" target="_blank"><img src="images/appleicon.png" class="pr-2" alt="buy album from Apple"></a>
                             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#album14">LISTEN</button>
                             <p class="ahcardfooter">2015</p>
                         </div>
@@ -314,11 +315,12 @@
                     </div>                    
     
             <div class="card m-3" style="width: 18rem;">
-                <img class="card-img-top" src="images/album_wpc600.jpg" alt="Chicago 1979 album">
+                    <img class="card-img-top" src="images/album_rr600.jpg" alt="Rock n Rockets album">
                     <div class="card-body">
-                        <h3 class="ahheader">West Park, Chicago, 1979</h3>
-                        <p class="ahbodytext">A bootleg live recording of the eleven-song Illinois concert on October 6, 1979</p>
-                        <p class="ahcardfooter">2015</p>
+                        <h3 class="ahheader">Live! Rock 'n Rockets</h3>
+                        <p class="ahbodytext">Limited release album of 12-song concert at the 2019 Disney Rock 'n Rockets Festival</p>
+                        <a href="https://music.apple.com/us/album/live-at-rock-n-rockets-1998/1453018958" target="_blank"><img src="images/appleicon.png" class="pr-2" alt="buy album from Apple"></a>
+                        <p class="ahcardfooter">2019</p>
                     </div>
              </div> 
         </div>  
