--- a/toggletest.html
+++ b/toggletest.html
@@ -5,7 +5,7 @@
         <title>The B-52's</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="./index.css">
+        <link rel="stylesheet" type="text/css" href="css/index.css">
     </head>
     
     <body>
@@ -26,10 +26,12 @@
             </div>
         </nav>
 
-        <div class="splashtoggle text-center" id="portraitswap">
-            <img src="images/B52s_portrait.png" alt="original band portrait">
-            <img src="images/splash_toggle.png" style="display:none;" alt="current band portrait">
+        <div class="text-center">
+            <img id="splashswapold" src="images/B52s_portrait.png" alt="original band portrait">
+            <img id="splashswapnew" style="display:none;" src="images/splash_toggle.png" alt="current band portrait">   
         </div>
+
+
 
 
 
@@ -60,7 +62,7 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<script src="./index.js"></script>
+<script src="js/index.js"></script>
     </body>
    
     </html>
