js shop filters + page text

--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
                 <li>Julee Cruise – vocals (1992–1994)</li>
                 <li>Sara Lee – bass (1989–1992)</li>
                 </ul></p>
-
+        </div>
 
             <div class="container pt-5">
                     <h1 class="ahsection">HISTORY</h1>
