--- a/gallery.html
+++ b/gallery.html
@@ -33,6 +33,11 @@
                 <p class="ahbodytext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisl purus in mollis nunc sed id semper. Ipsum dolor sit amet consectetur adipiscing elit duis tristique. Tristique et egestas quis ipsum suspendisse ultrices. Ac feugiat sed lectus vestibulum mattis. Egestas diam in arcu cursus.</p>
               </div>
 
+              <div class="container pt-5 pb-4">
+                <h1 class="ahsection">PHOTOS</h1>
+                <p class="ahbodytext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisl purus in mollis nunc sed id semper. Ipsum dolor sit amet consectetur adipiscing elit duis tristique. Tristique et egestas quis ipsum suspendisse ultrices. Ac feugiat sed lectus vestibulum mattis. Egestas diam in arcu cursus.</p>
+              </div>
+
               <div class="container">
                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
@@ -90,6 +95,10 @@
                   </div>
         
 
+                  <div class="container pt-5 pb-4">
+                    <h1 class="ahsection">VIDEOS</h1>
+                    <p class="ahbodytext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisl purus in mollis nunc sed id semper. Ipsum dolor sit amet consectetur adipiscing elit duis tristique. Tristique et egestas quis ipsum suspendisse ultrices. Ac feugiat sed lectus vestibulum mattis. Egestas diam in arcu cursus.</p>
+                  </div>
                   <div class="container p-5">
                     <div class="embed-responsive embed-responsive-16by9">
                       <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/videoseries?list=PLwjsyswl_Hj8jYFhuN7_Llh7T0Z_h927a"></iframe>
