--- a/shop.html
+++ b/shop.html
@@ -18,11 +18,11 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <div class="container-fluid p-2">
                         <ul class="nav nav-pills justify-content-center ahnavblock">
-                                <li class="nav-item p-2"><a class="nav-link ahnavlink" href="./music.html">MUSIC</a></li>
-                                <li class="nav-item p-2"><a class="nav-link ahnavlink" href="./about.html">ABOUT</a></li>
-                                <li class="nav-item p-2"><a class="nav-link ahnavlink" href="./tour.html">TOUR</a></li>
-                                <li class="nav-item p-2"><a class="nav-link ahnavlink" href="./gallery.html">GALLERY</a></li>
-                                <li class="nav-item p-2"><a class="active nav-link ahnavlink" href="./shop.html">SHOP</a></li>           
+                            <li class="nav-item p-2"><a class="nav-link ahnavlink" href="./music.html">MUSIC</a></li>
+                            <li class="nav-item p-2"><a class="nav-link ahnavlink" href="./about.html">ABOUT</a></li>
+                            <li class="nav-item p-2"><a class="nav-link ahnavlink" href="./tour.html">TOUR</a></li>
+                            <li class="nav-item p-2"><a class="nav-link ahnavlink" href="./gallery.html">GALLERY</a></li>
+                            <li class="nav-item p-2"><a class="active nav-link ahnavlink" href="./shop.html">SHOP</a></li>           
                         </ul>
                     </div>
                 </div>
@@ -30,158 +30,162 @@
 
         <div class="container pt-2 pb-5">
                 <h1 class="ahjumbotext">The B-52's Shop</h1>
-                <p class="ahbodytext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisl purus in mollis nunc sed id semper. Ipsum dolor sit amet consectetur adipiscing elit duis tristique. Tristique et egestas quis ipsum suspendisse ultrices. Ac feugiat sed lectus vestibulum mattis. Egestas diam in arcu cursus.</p>
+                <p class="ahbodytext">Show your love of The B-52's by rocking a band tee and mile-high wig, sipping joe from a Rock Lobster coffee mug, shaking a tambourine, or cranking a record full-blast. Thank you for selecting official B-52's merchandise. Colors available, materials used, and sizing information available on the product details pages. Click on a category below to filter products.</p>
+        </div>
+
+        <div class="container text-center pb-3">
+            <h2 class="ahsection"><span class="p-3 ahactivecat" id="alllink">ALL PRODUCTS</span> <span class="p-3" id="apparellink">APPAREL</span> <span class="p-3" id="musiclink">MUSIC</span> <span class="p-3" id="thingeeslink">THINGEES</span></h2>
         </div>
 
         <div class="container">
         <div class="row justify-content-center">
 
-            <div class="card m-3" style="width: 18rem;">
+            <div class="card m-3 apparelcat" style="width: 18rem;">
                 <img class="card-img-top" src="images/merch01.png" alt="planet tee">
                     <div class="card-body">
                         <h3 class="ahheader">Planet Tee</h3>
                         <p class="ahbodytext">Unisex blue tri-blend t-shirt</p>
-                        <a href="https://theb52s.manheadmerch.com/collections/frontpage/products/planet-tee" target="_blank" alt="buy shirt"><button type="button" class="btn btn-primary">ADD TO CART</button></a>
+                        <a href="https://theb52s.manheadmerch.com/collections/frontpage/products/planet-tee" target="_blank" alt="buy shirt"><button type="button" class="btn btn-primary">SEE DETAILS</button></a>
                         <p class="ahcardfooter">$24</p>
                     </div>
             </div>
 
-            <div class="card m-3" style="width: 18rem;">
+            <div class="card m-3 apparelcat" style="width: 18rem;">
                 <img class="card-img-top" src="images/merch02.png" alt="rock lobster sneakers">
                     <div class="card-body">
                         <h3 class="ahheader">Rock Lobster Converse</h3>
                         <p class="ahbodytext">made-to-order high tops</p>
-                        <a href="https://www.theavelosangeles.com/collections/the-b-52s/products/the-b-52s-rock-lobster-chucks?variant=38772226960" target="_blank" alt="buy shoes"><button type="button" class="btn btn-primary">ADD TO CART</button></a>
+                        <a href="https://www.theavelosangeles.com/collections/the-b-52s/products/the-b-52s-rock-lobster-chucks?variant=38772226960" target="_blank" alt="buy shoes"><button type="button" class="btn btn-primary">SEE DETAILS</button></a>
                         <p class="ahcardfooter">$119</p>
                     </div>
             </div>
 
-            <div class="card m-3" style="width: 18rem;">
+            <div class="card m-3 thingeecat" style="width: 18rem;">
                 <img class="card-img-top" src="images/merch03.png" alt="blue wig">
                     <div class="card-body">
                         <h3 class="ahheader">Blue Beehive Wig</h3>
                         <p class="ahbodytext">21", one size fits most</p>
-                        <a href="https://www.etsy.com/listing/688930464/1950s-beehive-classic-round-theatrical" target="_blank" alt="buy wig"><button type="button" class="btn btn-primary">ADD TO CART</button></a>
+                        <a href="https://www.etsy.com/listing/688930464/1950s-beehive-classic-round-theatrical" target="_blank" alt="buy wig"><button type="button" class="btn btn-primary">SEE DETAILS</button></a>
                         <p class="ahcardfooter">$29</p>
                     </div>
             </div>
 
-            <div class="card m-3" style="width: 18rem;">
+            <div class="card m-3 musiccat" style="width: 18rem;">
                 <img class="card-img-top" src="images/merch04.jpg" alt="wild planet record">
                     <div class="card-body">
                         <h3 class="ahheader">Wild Planet Vinyl</h3>
                         <p class="ahbodytext">Second abum, 9 tracks</p>
-                        <a href="https://www.barnesandnoble.com/w/wild-planet-the-b-52s/27670898" target="_blank" alt="buy record"><button type="button" class="btn btn-primary">ADD TO CART</button></a>
+                        <a href="https://www.barnesandnoble.com/w/wild-planet-the-b-52s/27670898" target="_blank" alt="buy record"><button type="button" class="btn btn-primary">SEE DETAILS</button></a>
                         <p class="ahcardfooter">$31.34</p>
                     </div>
             </div>
 
-            <div class="card m-3" style="width: 18rem;">
+            <div class="card m-3 thingeecat" style="width: 18rem;">
                 <img class="card-img-top" src="images/merch05.png" alt="tambourine">
                     <div class="card-body">
                         <h3 class="ahheader">Tambourine</h3>
                         <p class="ahbodytext">Full size with logo</p>
-                        <a href="https://theb52s.manheadmerch.com/products/tambourine" target="_blank" alt="buy tambourine"><button type="button" class="btn btn-primary">ADD TO CART</button></a>
+                        <a href="https://theb52s.manheadmerch.com/products/tambourine" target="_blank" alt="buy tambourine"><button type="button" class="btn btn-primary">SEE DETAILS</button></a>
                         <p class="ahcardfooter">$49.99</p>
                     </div>
             </div>
 
-            <div class="card m-3" style="width: 18rem;">
+            <div class="card m-3 apparelcat" style="width: 18rem;">
                 <img class="card-img-top" src="images/merch06.png" alt="rainbow tee">
                     <div class="card-body">
                         <h3 class="ahheader">Rainbow Tee</h3>
                         <p class="ahbodytext">Men's 100% cotton shirt</p>
-                        <a href="https://www.oldschooltees.com/b-52s-band-with-rainbow-t-shirt/" target="_blank" alt="buy shirt"><button type="button" class="btn btn-primary">ADD TO CART</button></a>
+                        <a href="https://www.oldschooltees.com/b-52s-band-with-rainbow-t-shirt/" target="_blank" alt="buy shirt"><button type="button" class="btn btn-primary">SEE DETAILS</button></a>
                         <p class="ahcardfooter">$22.95</p>
                     </div>
             </div>
 
-            <div class="card m-3" style="width: 18rem;">
+            <div class="card m-3 thingeecat" style="width: 18rem;">
                 <img class="card-img-top" src="images/merch07.png" alt="logo pin">
                     <div class="card-body">
                         <h3 class="ahheader">Enamel Pin</h3>
                         <p class="ahbodytext">1.4” with two backings</p>
-                        <a href="https://www.etsy.com/listing/607877970/the-b-52s-red-logo" target="_blank" alt="buy pin"><button type="button" class="btn btn-primary">ADD TO CART</button></a>
+                        <a href="https://www.etsy.com/listing/607877970/the-b-52s-red-logo" target="_blank" alt="buy pin"><button type="button" class="btn btn-primary">SEE DETAILS</button></a>
                         <p class="ahcardfooter">$10</p>
                     </div>
             </div>
 
-            <div class="card m-3" style="width: 18rem;">
+            <div class="card m-3 musiccat" style="width: 18rem;">
                 <img class="card-img-top" src="images/merch08.jpg" alt="the b52s record">
                     <div class="card-body">
                         <h3 class="ahheader">The B-52's Vinyl</h3>
                         <p class="ahbodytext">Debut album, 9 tracks</p>
-                        <a href="https://www.barnesandnoble.com/w/the-b-52s-the-b-52s/22949461" target="_blank" alt="buy record"><button type="button" class="btn btn-primary">ADD TO CART</button></a>
+                        <a href="https://www.barnesandnoble.com/w/the-b-52s-the-b-52s/22949461" target="_blank" alt="buy record"><button type="button" class="btn btn-primary">SEE DETAILS</button></a>
                         <p class="ahcardfooter">$33.24</p>
                     </div>
             </div>
 
-            <div class="card m-3" style="width: 18rem;">
+            <div class="card m-3 thingeecat" style="width: 18rem;">
                 <img class="card-img-top" src="images/merch09.png" alt="rock lobster poster">
                     <div class="card-body">
                         <h3 class="ahheader">Rock Lobster Poster</h3>
                         <p class="ahbodytext">Art print with lyrics</p>
-                        <a href="https://pixels.com/featured/b-52s-rock-lobster-lyric-poster-edward-fielding.html?product=poster" target="_blank" alt="buy poster"><button type="button" class="btn btn-primary">ADD TO CART</button></a>
+                        <a href="https://pixels.com/featured/b-52s-rock-lobster-lyric-poster-edward-fielding.html?product=poster" target="_blank" alt="buy poster"><button type="button" class="btn btn-primary">SEE DETAILS</button></a>
                         <p class="ahcardfooter">$32.35</p>
                     </div>
             </div>
 
-            <div class="card m-3" style="width: 18rem;">
+            <div class="card m-3 apparelcat" style="width: 18rem;">
                 <img class="card-img-top" src="images/merch10.png" alt="rock lobster tee">
                     <div class="card-body">
                         <h3 class="ahheader">Rock Lobster Tee</h3>
                         <p class="ahbodytext">Unisex blue tri-blend t-shirt</p>
-                        <a href="https://www.amazon.com/B-52S-Shirt-Lobster-Official-White/dp/B07H4M7HWQ" target="_blank" alt="buy shirt"><button type="button" class="btn btn-primary">ADD TO CART</button></a>
+                        <a href="https://www.amazon.com/B-52S-Shirt-Lobster-Official-White/dp/B07H4M7HWQ" target="_blank" alt="buy shirt"><button type="button" class="btn btn-primary">SEE DETAILS</button></a>
                         <p class="ahcardfooter">$17.71</p>
                     </div>
             </div>
 
-            <div class="card m-3" style="width: 18rem;">
+            <div class="card m-3 thingeecat" style="width: 18rem;">
                 <img class="card-img-top" src="images/merch11.png" alt="rock lobster mug">
                     <div class="card-body">
                         <h3 class="ahheader">Rock Lobster Mug</h3>
                         <p class="ahbodytext">Ceramic, dishwasher safe</p>
-                        <a href="https://www.redbubble.com/people/peterdrawings/works/36961453-rock-lobster?p=mug&style=standard" target="_blank" alt="buy mug"><button type="button" class="btn btn-primary">ADD TO CART</button></a>
+                        <a href="https://www.redbubble.com/people/peterdrawings/works/36961453-rock-lobster?p=mug&style=standard" target="_blank" alt="buy mug"><button type="button" class="btn btn-primary">SEE DETAILS</button></a>
                         <p class="ahcardfooter">$15.60</p>
                     </div>
             </div>
 
-            <div class="card m-3" style="width: 18rem;">
+            <div class="card m-3 thingeecat" style="width: 18rem;">
                 <img class="card-img-top" src="images/merch12.png" alt="planet claire poster">
                     <div class="card-body">
                         <h3 class="ahheader">Planet Claire Poster</h3>
                         <p class="ahbodytext">Illustration art print</p>
-                        <a href="https://dribbble.com/shots/2788443-B-52-s-Planet-Claire-t-shirt-design" target="_blank" alt="buy poster"><button type="button" class="btn btn-primary">ADD TO CART</button></a>
+                        <a href="https://dribbble.com/shots/2788443-B-52-s-Planet-Claire-t-shirt-design" target="_blank" alt="buy poster"><button type="button" class="btn btn-primary">SEE DETAILS</button></a>
                         <p class="ahcardfooter">SOLD OUT</p>
                     </div>
             </div>
 
-            <div class="card m-3" style="width: 18rem;">
+            <div class="card m-3 apparelcat" style="width: 18rem;">
                 <img class="card-img-top" src="images/merch13.png" alt="long sleeved tee">
                     <div class="card-body">
                         <h3 class="ahheader">Long Sleeved Tee</h3>
                         <p class="ahbodytext">various colors available</p>
-                        <a href="https://www.teepublic.com/long-sleeve-t-shirt/3038720-the-b-52s" target="_blank" alt="buy shirt"><button type="button" class="btn btn-primary">ADD TO CART</button></a>
+                        <a href="https://www.teepublic.com/long-sleeve-t-shirt/3038720-the-b-52s" target="_blank" alt="buy shirt"><button type="button" class="btn btn-primary">SEE DETAILS</button></a>
                         <p class="ahcardfooter">$15</p>
                     </div>
             </div>
 
-            <div class="card m-3" style="width: 18rem;">
+            <div class="card m-3 thingeecat" style="width: 18rem;">
                 <img class="card-img-top" src="images/merch14.png" alt="red wig">
                     <div class="card-body">
                         <h3 class="ahheader">Red Bouffant Wig</h3>
                         <p class="ahbodytext">21", one size fits most</p>
-                        <a href="https://www.etsy.com/listing/711507838/1960s-curly-long-beehive-theatrical" target="_blank" alt="buy wig"><button type="button" class="btn btn-primary">ADD TO CART</button></a>
+                        <a href="https://www.etsy.com/listing/711507838/1960s-curly-long-beehive-theatrical" target="_blank" alt="buy wig"><button type="button" class="btn btn-primary">SEE DETAILS</button></a>
                         <p class="ahcardfooter">$45</p>
                     </div>
             </div>
 
-            <div class="card m-3" style="width: 18rem;">
+            <div class="card m-3 musiccat" style="width: 18rem;">
                 <img class="card-img-top" src="images/merch15.jpg" alt="best of record">
                     <div class="card-body">
                         <h3 class="ahheader">Dance this Mess Around Vinyl</h3>
                         <p class="ahbodytext">Compilation album, 12 tracks</p>
-                        <a href="https://www.barnesandnoble.com/w/the-best-of-the-b-52s-dance-this-mess-around-the-b-52s/194807?ean=0600753594865" target="_blank" alt="buy record"><button type="button" class="btn btn-primary">ADD TO CART</button></a>
+                        <a href="https://www.barnesandnoble.com/w/the-best-of-the-b-52s-dance-this-mess-around-the-b-52s/194807?ean=0600753594865" target="_blank" alt="buy record"><button type="button" class="btn btn-primary">SEE DETAILS</button></a>
                         <p class="ahcardfooter">$28.49</p>
                     </div>
             </div>
@@ -216,6 +220,7 @@
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <script src="js/index.js"></script>
     </body>
    
     </html>
