--- a/gallery.html
+++ b/gallery.html
@@ -5,6 +5,7 @@
         <title>The B-52's Gallery</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,900&display=swap" rel="stylesheet">
+        <link  href="css/jquery.fancybox.min.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
@@ -28,78 +29,53 @@
                 </div>
         </nav>
 
-        <div class="container pt-2 pb-5">
-                <h1 class="ahjumbotext">The B-52's Gallery</h1>
-                <p class="ahbodytext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisl purus in mollis nunc sed id semper. Ipsum dolor sit amet consectetur adipiscing elit duis tristique. Tristique et egestas quis ipsum suspendisse ultrices. Ac feugiat sed lectus vestibulum mattis. Egestas diam in arcu cursus.</p>
-              </div>
+          <div class="container pt-2 pb-5">
+            <h1 class="ahjumbotext">The B-52's Gallery</h1>
+            <p class="ahbodytext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisl purus in mollis nunc sed id semper. Ipsum dolor sit amet consectetur adipiscing elit duis tristique. Tristique et egestas quis ipsum suspendisse ultrices. Ac feugiat sed lectus vestibulum mattis. Egestas diam in arcu cursus.</p>
+          </div>
 
-              <div class="container pt-5 pb-4">
-                <h1 class="ahsection">PHOTOS</h1>
-                <p class="ahbodytext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisl purus in mollis nunc sed id semper. Ipsum dolor sit amet consectetur adipiscing elit duis tristique. Tristique et egestas quis ipsum suspendisse ultrices. Ac feugiat sed lectus vestibulum mattis. Egestas diam in arcu cursus.</p>
-              </div>
+          <div class="container pt-2 pb-2"> 
+            <h1 class="ahsection">PHOTOS</h1>
+            <p class="ahbodytext">Click any thumbnail to launch slideshow.</p>
+          </div>
 
-              <div class="container">
-                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img class="d-block w-100" src="images/carousel01.jpg" alt="band photo">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="images/carousel02.jpg" alt="band photo">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="images/carousel03.jpg" alt="band photo">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="images/carousel04.jpg" alt="band photo">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="images/carousel05.jpg" alt="band photo">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="images/carousel06.jpg" alt="band photo">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="images/carousel07.jpg" alt="band photo">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="images/carousel08.jpg" alt="band photo">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="images/carousel09.jpg" alt="band photo">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="images/carousel10.jpg" alt="band photo">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="images/carousel11.jpg" alt="band photo">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="images/carousel12.jpg" alt="band photo">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="images/carousel13.jpg" alt="band photo">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="images/carousel15.jpg" alt="band photo">
-                      </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Next</span>
-                    </a>
-                  </div>
-        
+          <div class="container justify-content-center">
+            <a data-fancybox="gallery" href="images/carousel01.jpg">
+              <img src="images/carousel01preview.jpg" alt="band photo"></a>
+            <a data-fancybox="gallery" href="images/carousel02.jpg">
+              <img src="images/carousel02preview.jpg" alt="band photo"></a>
+            <a data-fancybox="gallery" href="images/carousel03.jpg">
+              <img src="images/carousel03preview.jpg" alt="band photo"></a>
+            <a data-fancybox="gallery" href="images/carousel04.jpg">
+              <img src="images/carousel04preview.jpg" alt="band photo"></a>
+            <a data-fancybox="gallery" href="images/carousel05.jpg">
+              <img src="images/carousel05preview.jpg" alt="band photo"></a>
+            <a data-fancybox="gallery" href="images/carousel06.jpg">
+              <img src="images/carousel06preview.jpg" alt="band photo"></a>
+            <a data-fancybox="gallery" href="images/carousel07.jpg">
+              <img src="images/carousel07preview.jpg" alt="band photo"></a>
+            <a data-fancybox="gallery" href="images/carousel08.jpg">
+              <img src="images/carousel08preview.jpg" alt="band photo"></a>
+            <a data-fancybox="gallery" href="images/carousel09.jpg">
+              <img src="images/carousel09preview.jpg" alt="band photo"></a>
+            <a data-fancybox="gallery" href="images/carousel10.jpg">
+              <img src="images/carousel10preview.jpg" alt="band photo"></a>
+            <a data-fancybox="gallery" href="images/carousel11.jpg">
+              <img src="images/carousel11preview.jpg" alt="band photo"></a>
+            <a data-fancybox="gallery" href="images/carousel12.jpg">
+              <img src="images/carousel12preview.jpg" alt="band photo"></a>
+            <a data-fancybox="gallery" href="images/carousel13.jpg">
+              <img src="images/carousel13preview.jpg" alt="band photo"></a>
+            <a data-fancybox="gallery" href="images/carousel14.jpg">
+              <img src="images/carousel14preview.jpg" alt="band photo"></a>
+          </div>
 
-                  <div class="container pt-5 pb-4">
+
+                  <div class="container pt-5 pb-2">
                     <h1 class="ahsection">VIDEOS</h1>
-                    <p class="ahbodytext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisl purus in mollis nunc sed id semper. Ipsum dolor sit amet consectetur adipiscing elit duis tristique. Tristique et egestas quis ipsum suspendisse ultrices. Ac feugiat sed lectus vestibulum mattis. Egestas diam in arcu cursus.</p>
+                    <p class="ahbodytext">Expand full playlist with icon in top right corner.</p>
                   </div>
-                  <div class="container p-5">
+                  <div class="container">
                     <div class="embed-responsive embed-responsive-16by9">
                       <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/videoseries?list=PLwjsyswl_Hj8jYFhuN7_Llh7T0Z_h927a"></iframe>
                     </div>
@@ -129,9 +105,18 @@
             </div>
         </footer>
 
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script
+        src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+        crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <script
+        src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+        integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+        crossorigin="anonymous"></script>
+        <script src="js/index.js"></script>
+        <script src="js/jquery.fancybox.min.js"></script>
     </body>
    
     </html>
