spacing, copywriting, revising about + tour

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-    <html>
+  <html>
 
     <head>
         <title>About The B-52's</title>
@@ -28,14 +28,14 @@
                 </div>
         </nav>
 
-        <div class="container pt-2 pb-5">
+        <div class="container pt-2 pb-4">
             <h1 class="ahjumbotext">About The B-52's</h1>
-            <p class="ahbodytext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisl purus in mollis nunc sed id semper. Ipsum dolor sit amet consectetur adipiscing elit duis tristique. Tristique et egestas quis ipsum suspendisse ultrices. Ac feugiat sed lectus vestibulum mattis. Egestas diam in arcu cursus.</p>
+            <p class="ahbodytext">Blending pop, punk, new wave, soul, surf, even sci-fi soundtracks from Fred’s collection, into their one-of-a-kind sound, The B-52’s are the world’s best party band. While Ricky <a target="_blank" href="https://music.avclub.com/rock-lobster-ricky-wilson-and-the-stupidest-guitar-1798273057">said</a> “I’ve just written the stupidest guitar line you’ve ever heard” of his iconic riff for Rock Lobster, Keith <a target="_blank" href="https://www.rollingstone.com/music/music-features/love-shacks-rock-lobsters-and-nude-parties-the-b-52s-in-their-own-words-627925/">described</a> their musical approach as “Our feeling was if it sounds good, it is good. So we put that freedom into writing. We felt like we could do anything.” With skillful, innovative, and sometimes bizarre layering of vocals, instrumentation, and surprising sounds, it is clear that the group has fun, and so do listeners.</p>
         </div>
 
-        <div class="container">
+        <div class="container pt-2 pb-2">
             <h1 class="ahsection">ORIGINAL BAND MEMBERS</h1>
-            <p class="ahbodytext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisl purus in mollis nunc sed id semper. Ipsum dolor sit amet consectetur adipiscing elit duis tristique. Tristique et egestas quis ipsum suspendisse ultrices.</p>
+            <p class="ahbodytext">From their 1979 debut album to the most recent Funplex, and every live show in between, The B-52’s have been serving up their distinctive blend of art, absurdity, and exuberance. Although the band has taken hiatuses—for family, solo projects, and most notably to grieve Ricky’s death in 1985—Cindy, Kate, Fred, and Keith are still making music together! If the below photo captions sound familiar to you, it’s because they're from <a target="_blank" href="https://www.youtube.com/watch?v=VvCng7-za1Y">Song for a Future Generation</a>.</p>
         <div class="row justify-content-center">
             <div class="card m-3" style="width: 18rem;">
                 <img class="card-img-top" src="images/fred.jpg" alt="Fred Schneider">
@@ -75,32 +75,84 @@
         </div>  
         </div>
 
-        <div class="container pt-5 pb-4">
+        <div class="container pt-5 pb-2">
             <h1 class="ahsection">TOURING BAND MEMBERS</h1>
-            <p class="ahbodytext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisl purus in mollis nunc sed id semper. Ipsum dolor sit amet consectetur adipiscing elit duis tristique. Tristique et egestas quis ipsum suspendisse ultrices. Ac feugiat sed lectus vestibulum mattis. Egestas diam in arcu cursus.</p>
-            <p class="ahbodytext">
-                <ul>
-                <li>Tracy Wormworth – bass (1992–present)</li>
-                <li>Sterling Campbell – drums (1992–2000, 2007–present)</li>
-                <li>Greg Suran – lead guitar (2013–present)</li>
-                <li>Ken Maiuri – keyboards, rhythm guitar (2016–present)</li>
-                <li>Paul Gordon – keyboards, rhythm guitar (2007–2016)</li>
-                <li>Pat Irwin – keyboards, rhythm guitar (1989–2007)</li>
-                <li>Zack Alford – drums (1989–1992, 2000–2007)</li>
-                <li>Julee Cruise – vocals (1992–1994)</li>
-                <li>Sara Lee – bass (1989–1992)</li>
-                </ul></p>
+            <p class="ahbodytext">Over the years, a number of talented musicians have helped bring The B-52’s music alive at concerts.</p>
+
+            <div class="row justify-content-center">
+            <div class="card m-3" style="width: 18rem;">
+                <div class="card-body">
+                    <h3 class="ahsubheader">Tracy Wormworth</h3> 
+                    <p>bass 
+                    <br>1992–present</p>
+                </div>
+            </div>
+            <div class="card m-3" style="width: 18rem;">
+                <div class="card-body">
+                    <h3 class="ahsubheader">Sterling Campbell</h3>  
+                    <p>drums 
+                    <br>1992–2000, 2007–present<p>
+                </div>
+            </div>
+            <div class="card m-3" style="width: 18rem;">
+                 <div class="card-body">
+                    <h3 class="ahsubheader">Greg Suran</h3>  
+                    <p>lead guitar 
+                    <br>2013–present<p>      
+                </div>
+            </div>
+            <div class="card m-3" style="width: 18rem;">
+                <div class="card-body">
+                    <h3 class="ahsubheader">Ken Maiuri</h3>  
+                    <p>keyboards, rhythm guitar 
+                    <br>2016–present<p>
+                </div>
+            </div>
+            <div class="card m-3" style="width: 18rem;">
+                <div class="card-body">
+                    <h3 class="ahsubheader">Paul Gordon</h3>  
+                    <p>keyboards, rhythm guitar 
+                    <br>2007–2016<p>
+                </div>
+            </div>
+            <div class="card m-3" style="width: 18rem;">
+                <div class="card-body">
+                    <h3 class="ahsubheader">Pat Irwin</h3>  
+                    <p>keyboards, rhythm guitar 
+                    <br>1989–2007<p>
+                </div>
+            </div>
+            <div class="card m-3" style="width: 18rem;">
+                <div class="card-body">
+                    <h3 class="ahsubheader">Zack Alford</h3>  
+                    <p>drums 
+                    <br>1989–1992, 2000–2007<p>
+                </div>
+            </div>
+            <div class="card m-3" style="width: 18rem;">
+                <div class="card-body">
+                    <h3 class="ahsubheader">Julee Cruise</h3>  
+                    <p>vocals 
+                    <br>1992–1994<p>
+                    </div>
+                </div>
+            <div class="card m-3" style="width: 18rem;">
+                <div class="card-body">
+                    <h3 class="ahsubheader">Sara Lee</h3>  
+                    <p>bass
+                    <br>1989–1992<p>
+                </div>
+            </div>
+            </div>
         </div>
 
-            <div class="container pt-5">
-                    <h1 class="ahsection">HISTORY</h1>
-                    <p class="ahbodytext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisl purus in mollis nunc sed id semper. Ipsum dolor sit amet consectetur adipiscing elit duis tristique. Tristique et egestas quis ipsum suspendisse ultrices. Ac feugiat sed lectus vestibulum mattis. Egestas diam in arcu cursus.</p>
+            <div class="container pt-5 pb-2">
+                <h1 class="ahsection">HISTORY</h1>
+                <p class="ahbodytext">The B-52’s formed in October 1976 over Chinese food and fiery volcano drinks, naming themselves after the Athens, Georgia slang for big, teased bouffant hairstyle. A few months later, they played their first show, then went on the road. Their fan following spread from New York City punk clubs across the country to the pop mainstream, leading to record deals, chart-topping songs, a devoted international fanbase, and critical acclaim. <a target="_blank" href="https://www.allmusic.com/artist/the-b-52s-mn0000043489/biography">LEARN MORE >></a></p>
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item pt-2" src="https://www.youtube.com/embed/Oh5J33KAaqw"></iframe>
                 </div>
             </div>
-
-
 
         <footer class="page-footer pt-3">
             <div class="container-fluid pt-4">
