--- a/tour.html
+++ b/tour.html
@@ -28,22 +28,17 @@
                 </div>
         </nav>
 
-        <div class="container pt-2 pb-5">
+        <div class="container pt-2 pb-4">
             <h1 class="ahjumbotext">The B-52's on Tour</h1>
-            <p class="ahbodytext">From their first gig in 1977 at a Valentine's party to their 40th anniversary tour in 2019, The B-52's continue to sell out entertaining shows around the world. The band's live performances are guaranteed to get fans dancing and singing along to beloved hits. Join Fred, Kate, Cindy, Keith, and touring bandmates at one of the upcoming concerts!</p>
+            <p class="ahbodytext">From their first gig in 1977 at a Valentine's party to their 40th anniversary tour in 2019, The B-52's continue to sell out entertaining shows around the world. The band's live performances are guaranteed to get fans dancing and singing along to beloved hits. Join Fred, Kate, and Cindy with touring bandmates at one of the upcoming concerts!</p>
         </div>
-
 
         <div class="container">
             <h1 class="ahsection">PURCHASE TICKETS</h1>
-            <p class="ahbodytext pb-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quam nulla porttitor massa id neque aliquam. Id velit ut tortor pretium viverra suspendisse potenti nullam. Varius morbi enim nunc faucibus a pellentesque sit amet. Est pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus.</p>
+            <p class="ahbodytext pb-3">The B-52's have just wrapped up a recent world tour, but there are a few special shows coming up.</p>
                 <div class="row">
                 <div class="col-lg-8">
                     <div class="row">
-                        <div class="col-4"><h4 class="ahheader">November 16, 2019</h4></div>
-                        <div class="col-4"><h4 class="ahheader">Mexico City</h4></div>
-                        <div class="col-4"><a href="https://www.ticketmaster.com.mx/corona-capital-individuales-general-por-dia-mexico-distrito-federal-11-16-2019/event/140056AEDA8CDE61" target="_blank" alt="buy tickets"><button type="button" class="btn btn-primary">TICKETS</button></a></div>
-                            <div class="w-100 p-4"></div>
                         <div class="col-4"><h4 class="ahheader">December 20, 2019</h4></div>
                         <div class="col-4"><h4 class="ahheader">New Orleans</h4></div>
                         <div class="col-4"> <a href="https://www1.ticketmaster.com/the-b-52s-and-berlin/event/1B00575299A7504C" target="_blank" alt="buy tickets"><button type="button" class="btn btn-primary">TICKETS</button></a></div>
@@ -53,6 +48,14 @@
                             <br>The 80s Cruise</h4></div>
                         <div class="col-4"> <a href="https://www.the80scruise.com/" target="_blank" alt="buy tickets"><button type="button" class="btn btn-primary">TICKETS</button></a></div>
                             <div class="w-100 p-3"></div>
+                        <div class="col-4"><h4 class="ahheader">April 1, 2020</h4></div>
+                        <div class="col-4"><h4 class="ahheader">Alameda</h4></div>
+                        <div class="col-4"><a href="https://en.wikipedia.org/wiki/April_Fools%27_Day" target="_blank" alt="buy tickets"><button type="button" class="btn btn-primary">TICKETS</button></a></div>
+                            <div class="w-100 p-4"></div>      
+                        <div class="col-4"><h4 class="ahheader">April 1, 2020</h4></div>
+                        <div class="col-4"><h4 class="ahheader">Oakland</h4></div>
+                        <div class="col-4"><a href="https://en.wikipedia.org/wiki/April_Fools%27_Day" target="_blank" alt="buy tickets"><button type="button" class="btn btn-primary">TICKETS</button></a></div>
+                            <div class="w-100 p-4"></div>                       
                     </div>
                 </div>
                 <div class="col-lg-4">
@@ -77,24 +80,9 @@
                 </div>
             </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <div class="container pt-4">
         <h1 class="ahsection">LIVE ALBUMS</h1>
-        <p class="ahbodytext">If you are interested in seeing The B-52's play live, but can't find a show near you, you might enjoy one of these concert albums. Id velit ut tortor pretium viverra suspendisse potenti nullam. Varius morbi enim nunc faucibus a pellentesque sit amet. Est pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus.</p></p>
+        <p class="ahbodytext">Can’t attend a live show? Dance around your living room to one of these concert albums.</p>
         <div class="row justify-content-center">
                 <div class="card m-3" style="width: 18rem;">
                         <img class="card-img-top" src="images/album_wtwc600.jpg" alt="With the Wild Crowd album">
