--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/index.css">
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+            <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153161926-1"></script>
+            <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-153161926-1');
+            </script>
     </head>
     
     <body>
@@ -21,7 +29,7 @@
                     <li class="nav-item"><img src="images/wig_ani.png" class="ahnavicon" alt="wig icon"></li>
                     <li class="nav-item pt-2"><a class="nav-link ahnavlink" href="./gallery.html">GALLERY</a></li>
                     <li class="nav-item"><img src="images/moon_ani.png" class="ahnavicon" alt="moon icon"></li>
-                    <li class="nav-item pt-2"><a class="nav-link ahnavlink" href="./shop.html">SHOP</a></li>                   
+                    <li class="nav-item pt-2"><a class="nav-link ahnavlink" href="./shop.html">SHOP</a></li>  
                 </ul>
             </div>
         </nav>
