--- a/gallery.html
+++ b/gallery.html
@@ -8,6 +8,14 @@
       <link  href="css/jquery.fancybox.min.css" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="css/index.css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153161926-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+          gtag('config', 'UA-153161926-1');
+        </script>
     </head>
     
     <body>
