--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/ui-lightness/jquery-ui.css">
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153161926-1"></script>
         <script>
