--- a/gallery.html
+++ b/gallery.html
@@ -8,6 +8,7 @@
       <link  href="css/jquery.fancybox.min.css" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="css/index.css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 
       <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153161926-1"></script>
         <script>
