--- a/music.html
+++ b/music.html
@@ -7,6 +7,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153161926-1"></script>
             <script>
