--- a/gallery.html
+++ b/gallery.html
@@ -19,7 +19,7 @@
         </script>
     </head>
     
-    <body>
+    <body class="ah-b52-body">
 
       <nav class="navbar navbar-expand-lg custom-toggler navbar-light">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
