--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </script>
     </head>
     
-    <body>
+    <body class="ah-b52-body">
 
         <nav>
             <div class="container-fluid">
