more up to date

--- a/tour.html
+++ b/tour.html
@@ -70,7 +70,7 @@
                 <div class="col-lg-4">
                     <div class="text-center pb-3">
                         <img src="images/tour.jpg" class=img-fluid alt="live show">
-                        <h3 class="ahheader pt-3">Live in London 2013</h3>
+                        <h3 class="ahheader pt-3">Live in London</h3>
                         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#london13">LISTEN</button>
                     </div>
                     <div class="modal fade" id="london13" tabindex="-1" role="dialog" aria-labelledby="london13Label" aria-hidden="true"> 
